adds client timeout for s21auth and s21bot s21web, fix properties and env files add circuit breakers/retries/fallbacks across auth, bot, edu, and rocket fix tests